# gate-ftx

./: .config.json.swp  .gitignore  CMakeLists.txt  README.md  build.sh  config.json  config.toml.old  config_from_configurator.json  default_config.toml  gateway.cpp  gateway.hpp  main.cpp
src/AERON/: Publisher.cpp  Publisher.hpp  Subscriber.cpp
src/REST/: async_rest_client.cpp  async_rest_client.hpp  rest_client.cpp  rest_client.hpp
src/WS/: WS.cpp  WS.hpp  ws_client.cpp  ws_client.hpp
src/config/: config.cpp  config.hpp
src/utils/: ASyncHTTP.cpp  ASyncHTTP.hpp  Encoding.cpp  Encoding.hpp  HTTP.cpp  HTTP.hpp  decl_header.hpp  logger.cpp  logging.cpp  logging.hpp  mylogger.cpp  mylogger.hpp  simdjson.cpp
